# openharmony-mlx

./: .gitignore  README.md  pyproject.toml  usage.md
gpt_oss/: chat.py  generate.py  harmony_template.py
gpt_oss/metal/include/gpt-oss/: functions.h
gpt_oss/metal/python/: context.c
gpt_oss/mlx_gpt_oss/: README.md  __init__.py  beam_search.py  config.py  generate.py  model.py  modules.py  moe.py  mxfp4.py  optimizations.py  weights.py
gpt_oss/responses_api/: serve.py
gpt_oss/tools/: __init__.py
